--- a/build.gradle
+++ b/build.gradle
@@ -29,3 +29,11 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+jar {
+    manifest {
+        attributes (
+                'Main-Class': 'com.fortniteplayerstatslinebot.FortnitePlayerStatsLineBotApplication'
+        )
+    }
+}
