--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,7 @@ test {
 jar {
     manifest {
         attributes (
-                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-                'Main-Class': 'com.fortniteplayerstatslinebot.FortnitePlayerStatsLineBotApplication'
+                'Class-Path': configurations.compile.collect { it.getName() }.join(' ')
         )
     }
 }
