chore: fix build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ test {
 jar {
     manifest {
         attributes (
-                'Class-Path': configurations.compile.collect { it.getName() }.join(' ')
+                'Main-Class': 'com.fortniteplayerstatslinebot.FortnitePlayerStatsLineBotApplication'
         )
+        from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
