chore: fix build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ test {
 
 jar {
     manifest {
+        enabled = false
         attributes(
-                'Class-Path': 'build/libs/fortnite-player-stats-line-bot-0.0.1-SNAPSHOT-plain.jar',
                 'Main-Class': 'com.fortniteplayerstatslinebot.FortnitePlayerStatsLineBotApplication'
         )
     }
